src/modules/tesla-android/filesystem/etc/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Mon Jan 17 18:55:18 2022
*filter
:INPUT ACCEPT [1244202:64966704]
:FORWARD ACCEPT [187249:169087507]
:OUTPUT ACCEPT [1739786:8672196179]
-A FORWARD -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -j ACCEPT
COMMIT
# Completed on Mon Jan 17 18:55:18 2022
# Generated by iptables-save v1.8.7 on Mon Jan 17 18:55:18 2022
*nat
:PREROUTING ACCEPT [1443:210555]
:INPUT ACCEPT [488:39101]
:OUTPUT ACCEPT [581:39839]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 212.14.18.124/32 -i br0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.66.1
-A PREROUTING -d 212.14.18.124/32 -i br0 -j DNAT --to-destination 192.168.66.1
-A PREROUTING -d 212.14.18.124/32 -i br0 -j DNAT --to-destination 192.168.66.1
-A POSTROUTING -j MASQUERADE
-A POSTROUTING -s 192.168.66.1/32 -p udp -m udp --dport 80 -j SNAT --to-source 212.14.18.124
-A POSTROUTING -s 192.168.66.1/32 -j SNAT --to-source 212.14.18.124
-A POSTROUTING -s 192.168.66.1/32 -j SNAT --to-source 212.14.18.124
COMMIT
# Completed on Mon Jan 17 18:55:18 2022
